syntax = "proto3";

package ai.lzy.v1;

option java_outer_classname = "LMD";
option java_package = "ai.lzy.v1.common";

message DataScheme {
  string dataFormat = 1;
  string schemaFormat = 2;
  string schemaContent = 3;

  map<string, string> metadata = 10;
}
