syntax = "proto3";

package lzy.proto.priv.v2;

option java_outer_classname = "LzyWorkflowApi";
option java_package = "ai.lzy.priv.v2";


service LzyWorkflow {
  rpc CreateWorkflow (CreateWorkflowRequest) returns (CreateWorkflowResponse);
  rpc AttachWorkflow (AttachWorkflowRequest) returns (AttachWorkflowResponse);
  rpc FinishWorkflow (FinishWorkflowRequest) returns (FinishWorkflowResponse);
  rpc DeleteWorkflow (DeleteWorkflowRequest) returns (DeleteWorkflowResponse);
}


message CreateWorkflowRequest {
  string workflowName = 1;
}

message CreateWorkflowResponse {
  string executionId = 1;
}

message AttachWorkflowRequest {
  string workflowName = 1;
  string executionId = 2;
}

message AttachWorkflowResponse {
}

message FinishWorkflowRequest {
  string workflowName = 1;
  string executionId = 2;
  string reason = 3;
}

message FinishWorkflowResponse {
}

message DeleteWorkflowRequest {
  string workflowName = 1;
}

message DeleteWorkflowResponse {
}
